Change ID of columns

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         </div>
     </header>
     <main>
-        <div id="fire-column" class="element">
+        <div id="fire" class="element">
             <div class="result-alert">
                 <p id="player-win-alert"></p>
             </div>
@@ -38,7 +38,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
                 <p class="element-name">Fire</p>
             </div>
         </div>
-        <div id="water-column" class="element">
+        <div id="water" class="element">
             <div class="result-alert">
                 <p id="tie-alert"></p>
             </div>
@@ -50,7 +50,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
                 <button id="reset-button">Reset</button>
             </div>
         </div>
-        <div id="earth-column" class="element">
+        <div id="earth" class="element">
             <div class="result-alert">
                 <p id="enemy-win-alert"></p>
             </div>
