Change ID of div containing enemy selection icon.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
             <p id="player-score">Player: 0</p>
         </div>
         <div id="footer-middle">
-            <div id="enemy-choice">
+            <div id="enemy-choice-div">
                 <span class="fa-solid fa-question" id="enemy-choice"></span>
             </div>
         </div>
