Add a descriptive tag under the enemy selection.

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
             <div id="enemy-choice-div">
                 <span class="fa-solid fa-question" id="enemy-choice"></span>
             </div>
+            <p id="enemy-choice-tag">Enemy Selection</p>
         </div>
         <div id="footer-right">
             <p id="enemy-score">0 :Enemy</p>
