Reposition win alerts. Reposition reset button. Tweak media queries.

--- a/index.html
+++ b/index.html
@@ -30,33 +30,31 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     </header>
     <main>
         <div id="fire" class="element">
-            <div class="result-alert">
-                <p id="player-win-alert"></p>
-            </div>
             <div class="element-icon">
                 <span class="fa-solid fa-fire-flame-curved large-icon" id="fire-large"></span>
                 <p class="element-name">Fire</p>
             </div>
+            <div class="result-alert">
+                <p id="player-win-alert"></p>
+            </div>
         </div>
         <div id="water" class="element">
-            <div class="result-alert">
-                <p id="tie-alert"></p>
-            </div>
+            <button id="reset-button">Reset</button>
             <div class="element-icon">
                 <span class="fa-solid fa-droplet large-icon" id="water-large"></span>
                 <p class="element-name">Water</p>
             </div>
-            <div id="reset">
-                <button id="reset-button">Reset</button>
+            <div class="result-alert">
+                <p id="tie-alert"></p>
             </div>
         </div>
         <div id="earth" class="element">
-            <div class="result-alert">
-                <p id="enemy-win-alert"></p>
-            </div>
-            <div class="element-icon"></div>
+            <div class="element-icon">
                 <span class="fa-brands fa-envira large-icon" id="earth-large"></span>
                 <p class="element-name">Earth</p>
+            </div>
+            <div class="result-alert">
+                <p id="enemy-win-alert"></p>
             </div>
         </div>
     </main>
