--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Elemental Arena</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" 
-href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&family=Press+Start+2P&family=Zen+Dots&display=swap" rel="stylesheet">
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&family=Press+Start+2P&family=Zen+Dots&display=swap" rel="stylesheet">
+    <audio preload="auto" src="audio/click-sound.wav" id="click-sound"></audio>
 </head>
 <body>
     <header>
