--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
                 <span class="fa-solid fa-fire-flame-curved large-icon" id="fire-large"></span>
                 <p class="element-name">Fire</p>
             </div>
-            <div class="result-alert">
-                <p id="player-win-alert"></p>
-            </div>
         </div>
         <div id="water" class="element">
             <button id="reset-button">Reset</button>
@@ -46,16 +43,13 @@
                 <p class="element-name">Water</p>
             </div>
             <div class="result-alert">
-                <p id="tie-alert"></p>
+                <p id="round-alert"></p>
             </div>
         </div>
         <div id="earth" class="element">
             <div class="element-icon">
                 <span class="fa-brands fa-envira large-icon" id="earth-large"></span>
                 <p class="element-name">Earth</p>
-            </div>
-            <div class="result-alert">
-                <p id="enemy-win-alert"></p>
             </div>
         </div>
     </main>
